feat(playground): render remote-compose snippets on the Android daemon → /d/<id>
Wire the production captureRemoteDocument, completing the Phase 3 producer (epic
#3014): a remote-compose playground snippet compiles against an Android catalog
classpath (--playground-android-bundle), renders on the Robolectric daemon over
its own compiled classes, and its captured .rc is fetched (compose/remotecompose-
doc, from the daemon return path) and published as a /d/<id> permalink.

- PlaygroundRcCaptureService: synthesize a one-preview previews.json, open a
  bundle-less Android daemon over the snippet's classesDir + full compile
  classpath, renderNow + await renderFinished, then fetch + Base64-decode the
  document. The session opener is injected, so the open→render→await→fetch
  orchestration is unit-tested against a fake RenderSession (success + manifest
  synthesis, no-document, timeout, rejected).
- SubprocessRenderSessions.openBundleDaemon gains optional jvmArgs /
  extraSystemProperties / userClasspath so an Android/Robolectric caller passes
  the --add-opens set, robolectric.* sysprops, and the snippet's full user
  classpath. Defaults preserve the existing desktop behavior.
- ServeCommand: resolve the Android/RC compile classpath, assemble the Robolectric
  launch (lib-daemon-android + android.jar + AndroidBundleLaunch jvmArgs/sysprops,
  mirroring ServeBundleDaemon), and bind capture + publish to the shared /d/
  ServeDocStore. Fail-soft: absent the sidecar, android.jar, or --docs, RC reports
  unavailable while CMP is unaffected.

The orchestration, previews.json synthesis, and openBundleDaemon defaults are
unit-tested in-process; the live Robolectric render is exercised by CI's Android
daemon harness (it needs the android daemon sidecar + Robolectric runtime, which
the dev sandbox can't run).